--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,7 +10,7 @@ body{
 }
 /* shared css */
 
-.primary-button{
+.btn-primary{
     color:#fff;
     background-color:#FD6E0A;
     font-weight: 600;
@@ -50,4 +50,22 @@ nav ul>li{
 nav a{
     text-decoration: none;
     font-weight: 600;
+}
+
+/* css for header */
+
+.header{
+    background-color: #FFF8F3;
+}
+
+/* css for banner */
+.banner{
+    border: 2px solid red;
+    display:flex;
+    align-items: center;
+    padding:30px 30px 30px 150px;
+}
+.banner-image{
+    width:350px;
+    height: 400px;
 }
