--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -56,6 +56,9 @@ nav a{
 
 .header{
     background-color: #FFF8F3;
+    background-image: url(/images/developer.png);
+    background-repeat: no-repeat;
+
 }
 
 /* css for banner */
@@ -63,9 +66,90 @@ nav a{
     border: 2px solid red;
     display:flex;
     align-items: center;
-    padding:30px 30px 30px 150px;
+    padding:30px 30px 0 180px;
+    background-image: url(/images/background.png);
+    background-repeat: no-repeat;
+    background-position: bottom right ;
+    justify-content: space-between;
+ 
 }
-.banner-image{
+.banner-profile{
     width:350px;
     height: 400px;
+}
+
+.banner-content{
+    width:600px;
+}
+.banner-greeting{
+font-size:35px;
+margin-bottom:0;
+
+}
+.banner-title{
+    font-size: 50px;
+    font-weight: 800;
+    margin-bottom:5px;
+    margin-top: 5px;
+}
+
+/* css for main part */
+
+.main-content{
+    max-width:75%;
+    margin:auto;
+    
+}
+
+/* css for about me section */
+
+.about{
+    text-align: center;
+    padding:50px 80px;
+    margin:60px;
+    background-color: #FFF8F3;
+    
+}
+
+.info{
+    display: flex;
+
+}
+
+.info>li{
+    list-style: none;
+    margin-right: 10px;
+    
+   
+
+}
+
+.info li >h4{
+    width:200px;
+    margin-top: 0;
+}
+
+/* css for what i do n know section */
+
+.dus-text{
+    text-align: center;
+    margin:20px 5px;
+}
+.dus-text p{
+    width:70%;
+    margin: auto;
+}
+
+.cards{
+    display: flex;
+    margin: auto;
+    justify-content: space-around;
+}
+.shado{
+    width:180px;
+    text-align: justify;
+    box-shadow: 0 0 6px rebeccapurple;
+    padding:15px 25px;
+    border-radius:6px;
+
 }
