--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -169,3 +169,45 @@ margin-bottom:0;
    text-align: center;
    margin:10px;
 }
+
+/* css for footer */
+
+.footer-container{
+    display: flex;
+    margin:60px 0;
+    padding: 50px 50px;
+    background-color: #FFF8F3;
+    gap:200px;
+   
+}
+
+.left-footer,.right-footer{
+    width:50%;
+}
+
+.connect{
+    text-align: center;
+}
+
+
+.social-icons a{
+    margin-left: 20px;
+    text-decoration: none;
+    font-size: 35px;
+    color:#FD6E0A;
+}
+
+
+.form-text{
+    font-size: 20px;
+    font-weight: 500;
+    
+}
+
+.right-footer input[type=text],input[type=email],textarea{
+    padding:15px 35px;
+    border:0;
+    border-radius: 6px;
+    width:50%;
+    margin-bottom: 10px;
+}
