--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -204,7 +204,7 @@ margin-bottom:0;
     
 }
 
-.right-footer input[type=text],input[type=email],textarea{
+.right-footer input[type="text"],input[type="email"],textarea{
     padding:15px 35px;
     border:0;
     border-radius: 6px;
